# airbnbmail_to_ai

./: .clinerules  .gitignore  .pre-commit-config.yaml  README.md  airbnb_notifications copy.db  airbnb_notifications.db  config.example.yaml  pyproject.toml  results.json
.github/workflows/: python-tests.yml
examples/: cli_demo.py  db_calendar_demo.py  simple_cli_demo.py
src/airbnmail_to_ai/: __init__.py  __main__.py
src/airbnmail_to_ai/auth/: __init__.py  gmail_auth.py
src/airbnmail_to_ai/calendar/: __init__.py  calendar_auth.py  calendar_service.py
src/airbnmail_to_ai/cli/: __init__.py  cli.py  commands.py
src/airbnmail_to_ai/cli/commands/: __init__.py  auth_commands.py  calendar_commands.py  db_commands.py  fetch_commands.py  utils.py
src/airbnmail_to_ai/db/: db_service.py
src/airbnmail_to_ai/gmail/: __init__.py  gmail_service.py
src/airbnmail_to_ai/models/: notification.py
src/airbnmail_to_ai/parser/: __init__.py  email_parser.py  llm_analyzer.py
src/airbnmail_to_ai/parser/llm/: __init__.py  analyzer.py  date_utils.py  prompts.py  response_parser.py
src/airbnmail_to_ai/services/: __init__.py  service_hub.py  webhook_service.py
src/airbnmail_to_ai/utils/: logging.py
tests/: test_cli.py  test_email_parser.py  test_llm_analyzer.py
